--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
         Educational Qualifications
       </h2>
       <article class="education-grid grid md:grid-cols-2 grid-cols-1 place-content-center gap-2">
-        <div class="fade-delay p-2 sm:p-4 fade-on-scroll bg-black/20 rounded-md">
+        <div class="fade-delay p-2 sm:p-4 fade-on-scroll bg-white/5 rounded-md">
           <p class="px-2 text-base sm:text-xl font-medium">
             University of Calicut
           </p>
@@ -190,7 +190,7 @@
             <span class="flex clear-left text-xs sm:text-sm text-white/75">2020 - 2023</span>
           </p>
         </div>
-        <div class="fade-delay p-2 sm:p-4 fade-on-scroll bg-black/20 rounded-md">
+        <div class="fade-delay p-2 sm:p-4 fade-on-scroll bg-white/5 rounded-md">
           <p class="px-2 text-base sm:text-xl font-medium">
             University of Calicut
           </p>
